<resources>
    <string name="app_name">RecyclingApp</string>

    <!--Place holder since we most likely will have icons on tabs-->
    <string name="tab_overall">Overall</string>
    <string name="tab_nearby">Nearby</string>
    <string name="tab_history">History</string>
    <string name="cancel">Cancel</string>
    <string name="add_button">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycling_class">Recycling Class</string>
    <string name="materials">Materials</string>
    <string name="dismiss">Dismiss</string>
    <string name="places_add_title">Pick all bins available here</string>
    <string name="places_filter_title">Filter by categories</string>
    <string name="places_modify_title">Modify what bins are available</string>
    <string name="facebook_app_id">995991727206762</string>
    <string name="maps_app_key">AIzaSyBqayXqbxZIeBIqzmwtlWbGvd4TrbD8Dps</string>
    <string name="fb_login_protocol_scheme">fb995991727206762</string>
    <string name="results_date_scanned">Date Scanned</string>
    <string name="results_barcode">Barcode</string>

    <!--Overall fragment-->
    <string name="scanned_number_user">Number of items scanned by you</string>
    <string name="scanned_number_global">Number of items scanned</string>
    <string name="scanned_most_material">Most scanned material</string>
    <string name="title_scanned_statistics_age">Number of scanned items by age group</string>
    <string name="header_guide_overall">Learn more about waste separation on
        \n<a href="http://www.affarsverken.se/sortera">Affärsverken website</a></string>

</resources>
