<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">

    <TextView
        android:id="@+id/text_title_chart_overall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_scanned_statistics_age"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart_overall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title_chart_overall"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/bar_chart_overall"
        app:layout_constraintBottom_toTopOf="@id/text_header_overall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mid"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_label_number_global_overall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/scanned_number_global"/>
            <TextView
                android:id="@+id/text_content_number_global_overall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/text_label_number_global_overall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="26sp"
                tools:text="2356"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top"
            app:layout_constraintBottom_toTopOf="@id/bottom">
            <TextView
                android:id="@+id/text_label_number_user_overall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text_content_number_global_overall"
                android:text="@string/scanned_number_user"/>
            <TextView
                android:id="@+id/text_content_number_user_overall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/text_label_number_user_overall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="26sp"
                tools:text="17"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/mid"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/text_label_most_material_overall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text_content_number_user_overall"
                android:text="@string/scanned_most_material"/>
            <TextView
                android:id="@+id/text_content_most_meterial_overall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/text_label_most_material_overall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="26sp"
                tools:text="Metal"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/text_header_overall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/header_guide_overall"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>